<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <Toolbar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#918E8E"
        android:title="@string/bar"
        android:titleTextColor="@android:color/white"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:text="@string/textView1"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:text="@string/textView2"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:text="@string/Adresse"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:text="@string/Surface"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:text="@string/textView"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/piece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="20dp">



        <RadioButton
            android:id="@+id/piscine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:text="@string/piscine"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            />

        <Button
            android:id="@+id/calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="#696969"
            android:text="@string/calcul"
            app:cornerRadius="0dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/supplimentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>
</LinearLayout>
